...
            "state" : "translated",
            "value" : "外观"
          }
        }
      }
    },
    "Audiobookphile" : {

    },
    "Bookmark Title (Optional)" : {

    },
    "Bookmarks" : {
...
            "state" : "translated",
            "value" : "你好 [%@](https://skip.dev)"
          }
        }
      }
    },
    "Home" : {
      "comment" : "Tab bar item title for the Home tab",
      "extractionState" : "stale",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
