...
            "state" : "translated",
            "value" : "首页"
          }
        }
      }
    },
    "Library" : {

    },
    "Light" : {
      "comment" : "Menu item indicating that the appearance should be in light mode",
      "localizations" : {
        "es" : {
...
    "Pending..." : {

    },
    "Play" : {

    },
    "Playback Error" : {

    },
    "Powered by [Skip](https://skip.dev)" : {
      "comment" : "Link markdown text for the Powered by… label",
      "extractionState" : "stale",
      "localizations" : {
...
