...
                    LinearGradient(colors: [.gray.opacity(0.3), .gray.opacity(0.2)], startPoint: .leading, endPoint: .trailing) :
                    LinearGradient(colors: [.appPrimary, .appSecondary], startPoint: .leading, endPoint: .trailing)
                )
                .clipShape(RoundedRectangle(cornerRadius: 12))
                .shadow(color: (detailed.isMissing == true || viewModel.isStartingPlayback) ? .clear : .appPrimary.opacity(0.3), radius: 10)
            }
            .accessibilityIdentifier("abp_play_book_button")
            .disabled(detailed.isMissing == true || viewModel.isStartingPlayback)

            // Dynamic Download Button
            if detailed.isMissing == true {
                Button {
                    // Disabled
...
